bug/19106 - spacing on song page below header

--- a/sites/all/themes/ewo/assets/_scss/page/_song.scss
+++ b/sites/all/themes/ewo/assets/_scss/page/_song.scss
@@ -28,6 +28,7 @@
   }
 
   .page {
+    margin-top: 0;
     max-width:none;
   }
 
